fixes for dark mode
update todo, auto format css

--- a/src/css/components/typechart.css
+++ b/src/css/components/typechart.css
@@ -1,31 +1,46 @@
 #type-chart table {
-    table-layout: fixed;
-    width: 100%;
+	table-layout: fixed;
+	width: 100%;
 }
 
-#type-chart td, #type-chart th {
-    @apply text-center border-2 border-gray-100 p-1 m-1;
+#type-chart td,
+#type-chart th {
+	@apply text-center border-2 border-gray-100 p-1 m-1;
 }
 #type-chart th {
-    @apply text-gray-600 w-12;
+	@apply text-gray-600 w-12;
 }
 
 #type-chart td.super {
-    @apply bg-green-100;
+	@apply bg-green-100;
 }
 #type-chart td.resist {
-    @apply bg-red-100;
+	@apply bg-red-100;
 }
 #type-chart td.immune {
-    @apply bg-gray-100;
+	@apply bg-gray-100;
+}
+
+body.dark-mode #type-chart td.super {
+	@apply bg-green-800;
+}
+body.dark-mode #type-chart td.resist {
+	@apply bg-red-800;
+}
+body.dark-mode #type-chart td.immune {
+	@apply bg-gray-800;
+}
+
+body.dark-mode #type-chart th {
+	@apply text-gray-200;
 }
 
 #type-chart .type-icon {
-    /* filter:invert(1); */
-    /* width: 1rem; */
+	/* filter:invert(1); */
+	/* width: 1rem; */
 
-    @apply bg-gray-600 mx-auto;
-    width: 1.25rem;
-    padding: 0.25rem;
-    border-radius: 25%;
+	@apply bg-gray-600 mx-auto;
+	width: 1.25rem;
+	padding: 0.25rem;
+	border-radius: 25%;
 }
